@@ -1,4 +1,6 @@
 Changes for 1.8.1
+
+ - [ZBX-1460] forbidded creation of circular template linkages (Vedmak)
  - [ZBX-1441] fixed wrong rememberes link line type (Vedmak)
  - [ZBX-1498] fixed error when try to create item with custom key "log" and not Log item type (Vedmak)
  - [ZBX-1283] fixed group selection in maintenance edit form (Vedmak)
